# dmpath

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh
cmake/: ModuleImport.cmake
env/: uninstall.bat
icon/: convert.bat
include/: dmos.h  dmpath.h  dmutil.h
src/: dmpath.c  getopt.c  getopt_win32.h
src/dmpath/: dmpath.cc  dmpath_module.def
task/: install.bat  uninstall.bat
test/dmpathtest/: dmpath.cc
tools/dmpath/: dmpath.rc  main.cc
tools/dmpathenv/: dmpathenv.c  getopt_win32.c
